DOM workshop done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <section style="margin-bottom: 50px; margin-top:50px">
          <h2>Global challenges </h2>
          <div class="global-challenge">
-             <p class="global-challenge-description"> Color the whole page with yellow 🥺 </p>
+             <p class="global-challenge-description"> Color the whole page with yellow 🥺 👽 </p>
              <div class="guide">CSS selector to use : HTML tag &#60;body&#60; </div>
          </div>
          <hr>
